# fastapi-template

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
playgroud/di/: 1.py  factory_vs_singeton.py  fastapi_redis.py  test_fastapi_redis.py
playgroud/fastapi_deps_relink/: app.py
playground/di/: fastapi_redis.py  test_fastapi_redis.py
playground/fastapi-recovery/: README.md  test.py
src/fastapi_template/: __init__.py
