[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "dependency-injector>=4.44.0",
    "redis>=5.2.1",
    "fastapi>=0.115.6",
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.25.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_template"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
